# decoct

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  decoct-claude-code-handover.md  decoct-dev-plan.md  decoct-plan.md  pyproject.toml
.claude/rules/: entity-graph.md  strip-secrets.md  testing.md  yaml-processing.md
.github/workflows/: ci.yaml
benchmarks/: bench_storage.py
docs/: DOCS-INDEX.md  api.md  assertion-authoring.md  baseline-measurement.md  bundled-assertions.md  bundled-schemas.md  cli-reference.md  cookbook.md  entity-graph-architecture.md  entity-graph-data-manual.md  entity-graph-evaluation.md  eval-results.md  getting-started.md  input-formats.md  integration.md  manual.md  output-format.md  phase2-plan.md  profile-authoring.md  roadmap.md  schema-authoring.md  session-summary-2026-03-10.md  steering.md  troubleshooting.md  usage.md
docs/decisions/: 001-yaml-output-only.md  002-dataclasses-over-pydantic.md  003-ruamel-yaml-roundtrip.md  004-strip-secrets-first.md  005-assertions-not-rules.md  006-optional-llm-dependency.md  007-class-reconstitution.md  008-confidence-levels.md  009-topological-pass-ordering.md  010-match-is-optional.md
docs/dev/: api-reference.md  architecture.md  decoct-spec-v1.3.1.md  entity-graph-handoff.md  security.md  testing.md  writing-passes.md
output/entity-graph/: iosxr-access-pe_classes.yaml  iosxr-access-pe_instances.yaml  iosxr-bng_classes.yaml  iosxr-bng_instances.yaml  iosxr-p-core_classes.yaml  iosxr-p-core_instances.yaml  iosxr-rr_classes.yaml  iosxr-rr_instances.yaml  iosxr-services-pe_classes.yaml  iosxr-services-pe_instances.yaml
output/entra-intune/: entra-application_1_classes.yaml  entra-application_1_instances.yaml  entra-application_2_classes.yaml  entra-application_2_instances.yaml  entra-application_3_classes.yaml  entra-application_3_instances.yaml  entra-application_4_classes.yaml  entra-application_4_instances.yaml  entra-application_classes.yaml  entra-application_instances.yaml  entra-conditional-access_10_classes.yaml  entra-conditional-access_10_instances.yaml  entra-conditional-access_11_classes.yaml  entra-conditional-access_11_instances.yaml  entra-conditional-access_1_classes.yaml  entra-conditional-access_1_instances.yaml  entra-conditional-access_2_classes.yaml  entra-conditional-access_2_instances.yaml  entra-conditional-access_3_classes.yaml  entra-conditional-access_3_instances.yaml  entra-conditional-access_4_classes.yaml  entra-conditional-access_4_instances.yaml  entra-conditional-access_5_classes.yaml  entra-conditional-access_5_instances.yaml  entra-conditional-access_6_classes.yaml  entra-conditional-access_6_instances.yaml  entra-conditional-access_7_classes.yaml  entra-conditional-access_7_instances.yaml  entra-conditional-access_8_classes.yaml  entra-conditional-access_8_instances.yaml  entra-conditional-access_9_classes.yaml  entra-conditional-access_9_instances.yaml  entra-conditional-access_classes.yaml  entra-conditional-access_instances.yaml  entra-group_1_classes.yaml  (+14 more)
scripts/: eval_projection_models.py  fetch_corpus.py  generate_eval_questions.py  run_agent_qa_eval.py  run_cdn_edge.py  run_enterprise_campus.py  run_entra_intune.py  run_eval_harness.py  run_evaluation.py  run_generation.py  run_hybrid_infra.py  run_iosxr_pipeline.py  run_k8s_fleet.py  run_model_comparison.py  run_pipeline.py  run_telco_5g.py  run_xml_archetypal.py  run_xml_reconstruct.py  smoke_test_eval.py
tests/: test_agent_qa.py  test_analysis.py  test_archetypal.py  test_assertions.py  test_benchmark.py  test_cdn_edge_e2e.py  test_class_extractor.py  test_cli.py  test_composite_decomp.py  test_compression_engine.py  test_corpus_classes.py  test_delta.py  test_discovery.py  test_e2e.py  test_enterprise_campus_e2e.py  test_entity_graph_e2e.py  test_entity_graph_stats.py  test_entra_intune_e2e.py  test_extraction_fidelity.py  test_formats_xml.py  test_hybrid_infra_e2e.py  test_ini_input.py  test_integration.py  test_json_input.py  test_k8s_fleet_e2e.py  test_learn.py  test_learn_ingestion.py  test_learn_tier_a.py  test_normalisation.py  test_parallel.py  test_pipeline.py  test_profiles.py  test_qa_evaluate.py  test_qa_questions.py  test_reconstruct.py  test_reconstruction.py  test_render.py  test_schema_bundling.py  test_schemas.py  test_source_fidelity.py  (+4 more)
(+2013 files in other folders)
